--- a/DemeterParking/ParkingApp/templates/index.html
+++ b/DemeterParking/ParkingApp/templates/index.html
@@ -11,12 +11,38 @@
     <script src="js/jquery-3.4.1.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 	</head>
 
 	<body>
     <div class="container">
-
+      <div class="center">
+        <div class="row ">      
+          <div class="login_container col s12">
+            <h1> Demeter Parking </h1>
+            <form class="col s12">
+              <div class="row">
+                <div class = "col l3"></div>
+                <div class="input-field col s12 l6">
+                  <input id="password" type="password" class="validate">
+                  <label for="password">Password</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class = "col l3"></div>
+                <div class="input-field col s12 l6">
+                  <input id="email" type="email" class="validate">
+                  <label for="email">Email</label>
+                </div>
+              </div>
+            </form>
+            <a class="waves-effect waves-light btn" href="home.html">LOGIN</a>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <script src="js/materialize.min.js"></script>
 	</body>
 
 </html>
