Front End 1st Draft Done

--- a/DemeterParking/ParkingApp/templates/search.html
+++ b/DemeterParking/ParkingApp/templates/search.html
@@ -34,7 +34,7 @@
                     <label for="Address">Address</label>
                   </div>
                   <div class="l4">
-                    <a class="waves-effect waves-light btn" href="search.html" id="top_marg">Search</a>
+                    <a class="waves-effect waves-light btn" href="results.html" id="top_marg">Search</a>
                   </div>
                 </div>
             </form>
